--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pure-react-carousel": "^1.29.0",
+    "number-abbreviate": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
