--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.11.0",
     "number-abbreviate": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-lazy-load": "^4.0.1",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "use-object-url": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
